feat: take Ubuntu Security Notices from the Ubuntu Security API
Fetch the notices from https://ubuntu.com/security/notices.json instead of
parsing ubuntu-security-announce digests retrieved over Gmail IMAP. The period
is given with --start and --end; --infile still parses archived mail.

The Ubuntu priority of a CVE is still read from the icon file name on
https://ubuntu.com/security/<CVE id>. The JSON endpoint that serves the same
value answers HTTP 503 and 504 for long stretches, so it is not used.

Store every priority obtained in $HOME/.cache/Utility-security/cve-priority.tsv,
appending each one as soon as it is known so that an interrupted run keeps what
it obtained. Look up every CVE of a notice even after one of them fails: the
earlier version stopped at the first failure, which left the CVEs after it
unstored and made every later run stop at the same place. One run left 1074 CVEs
unfetched that way.

Report the highest priority among the CVEs that Ubuntu has ranked, even when
others are unranked. Tell apart the three situations that leave a notice without
a rank: LookupFailed, Unrated and NoCve. List the CVEs of priority High or above
in a severe_cves column.

Merge the re-issues that share a USN number into one row. Keep only the kernel
flavours in use, named explicitly rather than by listing the ones to drop. Order
the output by publication date, oldest first.

Send every request to ubuntu.com through UbuntuSecurityHttpClient: at least
three seconds apart, up to ten attempts with the wait growing by five seconds,
and a response timeout of 120 seconds. Read the response line by line and stop
at the value sought.

Add ubuntu:livepatch-report, which reports the Kernel Live Patch Security
Notices that tell an operator a kernel fix can be applied without a reboot.
Add ubuntu:append-xlsx, which adds a report to the patch history workbook and
writes a separate file, never the source.

Depend on com.scivicslab:pluggable-cli 1.0.0. The declared
com.github.oogasawa: